--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "antd": "^5.15.3",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.22.3",
     "web-vitals": "^3.5.2"
   },
