--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "chart.js": "^4.4.2",
+    "express": "^4.19.1",
     "framer-motion": "^11.0.20",
+    "mysql2": "^3.9.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
