Added A Recent Transactions Section To Dashboard, Updated Packages JSON to also contain the packages needed to run the back-end, a few cosmetic changes here and there...

--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@emotion/styled": "^11.11.0",
     "antd": "^5.15.3",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.0.20",
+    "mysql2": "^3.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
