--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "antd": "^5.15.3",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.2",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.0.20",
     "mysql2": "^3.9.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-infinite-scroll-component": "^6.1.0",
