--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.0.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.22.3",
+    "uuid": "^9.0.1",
     "web-vitals": "^3.5.2"
   },
   "devDependencies": {
