--- a/src/back-end/package.json
+++ b/src/back-end/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "mysql2": "^3.9.1"
   },
   "devDependencies": {
